fix poocoin link

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ body {font-family: "Lato", sans-serif}
 			<img src="images/pcs.png" class="shortlinks"/>
 		</a>
 		
-		<a href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x115a49871f02c522090cb45bbe715db406cafa33">
+		<a href="https://poocoin.app/tokens/0x115a49871f02c522090cb45bbe715db406cafa33">
 		<img src="images/poo.png" class="shortlinks"/>
 		</a>
     </div>
