--- a/index.html
+++ b/index.html
@@ -87,22 +87,22 @@ body {font-family: "Lato", sans-serif}
 			  <tr>
 				<td><img src="assets/fee.png" style="width: 20px; height: 20px;"/></td>
 				<td>Tax per transaction</td>
-				<td class="price">6%</td>
+				<td class="price">9%</td>
 			  </tr>
 			  <tr>
 				<td><img src="assets/marketing.png" style="width: 20px; height: 20px;"/></td>
-				<td>Marketing</td>
+				<td>Redistributed</td>
 				<td class="price">2%</td>
 			  </tr>
 			  <tr>
 				<td><img src="assets/staking.png" style="width: 20px; height: 20px;"/></td>
-				<td>Staking</td>
-				<td class="price">2%</td>
+				<td>Liquidity</td>
+				<td class="price">3%</td>
 			  </tr>
 			  <tr>
 				<td><img src="assets/liquidity.png" style="width: 20px; height: 20px;"/> </td>
-				<td>Liquidity</td>
-				<td class="price">2%</td>
+				<td>Stream donation wallet</td>
+				<td class="price">4%</td>
 			  </tr>
 			</table>
   </div>
