--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
                 <p>Gain interest by holding. 2% per transaction is redistributed to all holders.</p>
               </div>
             </div>
-            <div class="img">
+            <div class="img s2_img">
               <img src="media/undraw_Data_re_80ws_1.png" alt="People making a graph">
             </div>
           </div>
-          <div class="subcontainers2">
+          <div class="subcontainers2 s2_stats-container">
             <div class="text_cp s2_stats_text">
               <h3>Current Price</h3>
               <h4>$0.0000000000742148</h4>
@@ -152,13 +152,13 @@
               <div class="icons4"><div class="img_div"><img src="assets\staking.png" id="liquidity" alt="2% fee goes to holders"></div><h3>2% Distributed to all holders proportionally</h3></div>
               <div class="icons4"><div class="img_div"><img src="assets\liquidity.png" id="liquidity" alt="3% fee goes to liquidity pool"></div><h3>3% Fee per transaction auto add to liquidity pool</h3></div>
               <div class="icons4"><div class="img_div"><img src="assets\176696.png" id="liquidity" alt="4% is sent to the stream donation wallet"></div><h3>4% Send to the stream donations wallet</h3></div>
+              <a class="link_telegram" id="inv_link_tele" href="https://t.me/streamraidsbsc">Join telegram</a>
             </div>
             <div class="social-medias4">
               <a class="social-links4" id="telegrams4" target="_blank" href="https://t.me/streamraidsbsc"><img id="telegram" src="media/512px-Telegram_logo.svg.png" alt="Telegram"></a>
               <a class="social-links4" id="twitters4" target="_blank" href="https://twitter.com/StreamRaidsBSC"><img id="twitter" src="media/gorjeo.png" alt="Twitter"></a>
               <a class="social-links4" id="pancakes4" target="_blank" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x115a49871f02c522090cb45bbe715db406cafa33"><img id="pancake" src="media/logo.4b4c5aed.png" alt="PancakeSwap"></a>
               <a class="social-links4" id="poocoins4" target="_blank" href="https://poocoin.app/tokens/0x115a49871f02c522090cb45bbe715db406cafa33"><img id="poocoin" src="media/poocoin512.png" alt="Poocoin"></a>
-              <a id="inv_link_tele" href="https://t.me/streamraidsbsc">Join telegram</a>
             </div>
           </div>
           <div class="footer">
