Finished important resolutions

--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
             <li><span class="roadmap_text">Token launch on PancakeSwap</span></li>
             <li><span class="roadmap_text">Website and Social Media</span></li>
             <li><span class="roadmap_text">Whitepaper</span></li>
-            <li><span class="roadmap_text">Small influencers Marketing</span></li>
-            <li><span class="roadmap_text">First Strem Raid</span></li>
+            <li><span class="roadmap_text">Influencers Marketing</span></li>
+            <li><span class="roadmap_text">First Stream Raid</span></li>
             <li><span class="roadmap_text">CoinGecko and CMC application</span></li>
             <li><span class="roadmap_text">Contract audit</span></li>
           </ul>
@@ -128,9 +128,9 @@
           <h2>Q3 - 2021</h2>
           <ul>
             <li><span class="roadmap_text">StreamRaids Mobile App</span></li>
-            <li><span class="roadmap_text">Big Influencers Marketing</span></li>
-            <li><span class="roadmap_text">Big streamers as part of community</span></li>
-            <li><span class="roadmap_text">Develop a streaming mentorship plataform</span></li>
+            <li><span class="roadmap_text">Influencers Marketing 2.0</span></li>
+            <li><span class="roadmap_text">Streamers as part of community</span></li>
+            <li><span class="roadmap_text">Develop a streaming mentorship platform</span></li>
             <li><span class="roadmap_text">Charity stream</span></li>
             <li><span class="roadmap_text">Merch</span></li>
             <li><span class="roadmap_text">More to come...</span></li>
