--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
 
       <section class="section s1" id="s1">
 
-        <video id="video" src="media/back-section-1.mp4" muted loop autoplay data-keepplaying></video>
+        <video id="s1_video" src="media/back-section-1.mp4" muted loop autoplay data-keepplaying></video>
 
-        <div class="overlay"></div>
+        <div class="s1_overlay"></div>
 
         <div class="s1_text noselect">
 
             <p>Welcome to the</p>
-            <a class="chart_button" href="https://poocoin.app/tokens/0x115a49871f02c522090cb45bbe715db406cafa33" target="_blank"><h1 class="theme_color">STREAMRAIDERS</h1></a>
+            <a class="s1_chart_button" href="https://poocoin.app/tokens/0x115a49871f02c522090cb45bbe715db406cafa33" target="_blank"><h1 class="theme_color">STREAMRAIDERS</h1></a>
             <p id="s1_description">
               StreamRaids is a community driven token, aiming to help and promote small streamers around the world.
             </p>
@@ -48,33 +48,33 @@
         </div>
 
         <div class="s1_buttons">
-          <a class="buy_button" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x115a49871f02c522090cb45bbe715db406cafa33" target="_blank">GO BUY NOW</a>
+          <a class="s1_buy_button" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x115a49871f02c522090cb45bbe715db406cafa33" target="_blank">GO BUY NOW</a>
         </div>
 
-        <div class="social-media">
-          <ul class="social-media">
-            <li><a class="social-link" id="telegram" target="_blank" href="https://t.me/streamraidsbsc"><img id="telegram" src="media/512px-Telegram_logo.svg.png" alt="Telegram"></a></li>
-            <li><a class="social-link" id="twitter" target="_blank" href="https://twitter.com/StreamRaidsBSC"><img id="twitter" src="media/gorjeo.png" alt="Twitter"></a></li>
-            <li><a class="social-link" id="pancake" target="_blank" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x115a49871f02c522090cb45bbe715db406cafa33"><img id="pancake" src="media/logo.4b4c5aed.png" alt="PancakeSwap"></a></li>
-            <li><a class="social-link" id="poocoin" target="_blank" href="https://poocoin.app/tokens/0x115a49871f02c522090cb45bbe715db406cafa33"><img id="poocoin" src="media/poocoin512.png" alt="Poocoin"></a></li>
+        <div class="s1_social-media">
+          <ul class="s1_social-media">
+            <li><a class="s1_social-link" id="telegram" target="_blank" href="https://t.me/streamraidsbsc"><img id="telegram" src="media/512px-Telegram_logo.svg.png" alt="Telegram"></a></li>
+            <li><a class="s1_social-link" id="twitter" target="_blank" href="https://twitter.com/StreamRaidsBSC"><img id="twitter" src="media/gorjeo.png" alt="Twitter"></a></li>
+            <li><a class="s1_social-link" id="pancake" target="_blank" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x115a49871f02c522090cb45bbe715db406cafa33"><img id="pancake" src="media/logo.4b4c5aed.png" alt="PancakeSwap"></a></li>
+            <li><a class="s1_social-link" id="poocoin" target="_blank" href="https://poocoin.app/tokens/0x115a49871f02c522090cb45bbe715db406cafa33"><img id="poocoin" src="media/poocoin512.png" alt="Poocoin"></a></li>
           </ul>
         </div>
 
       </section>
 
       <section class="section s2" id="s2">
-        <div class="containers2">
-          <div class="subcontainers2">
-            <div class="description">
-              <div class="text_cd">
+        <div class="s2_container">
+          <div class="s2_sub-container">
+            <div class="s2_description">
+              <div class="s2_text_cd">
                 <h2>Comunity Driven</h2>
                 <p>StreamRaids is a community owned project. All major decisions are taken by the community.</p>
               </div>
-              <div class="text_lp">
+              <div class="s2_text_lp">
                 <h2>Automatic LP</h2>
                 <p>3% per transaction is locked in liquidity and burned.</p>
               </div>
-              <div class="text_sr">
+              <div class="s2_text_sr">
                 <h2>Static Rewards</h2>
                 <p>Gain interest by holding. 2% per transaction is redistributed to all holders.</p>
               </div>
@@ -83,20 +83,20 @@
               <img src="media/undraw_Data_re_80ws_1.png" alt="People making a graph">
             </div>
           </div>
-          <div class="subcontainers2 s2_stats-container">
-            <div class="text_cp s2_stats_text">
+          <div class="s2_sub-container s2_stats-container">
+            <div class="s2_text_cp s2_stats_text">
               <h3>Current Price</h3>
               <h4>$0.0000000000742148</h4>
             </div>
-            <div class="text_hodl s2_stats_text">
+            <div class="s2_text_hodl s2_stats_text">
               <h3>Hodlers</h3>
               <h4>153</h4>
             </div>
-            <div class="text_sup s2_stats_text">
+            <div class="s2_text_sup s2_stats_text">
               <h3>Supply</h3>
               <h4>500,000,000,000,000</h4>
             </div>
-            <div class="text_mc s2_stats_text">
+            <div class="s2_text_mc s2_stats_text">
               <h3>Market Cap</h3>
               <h4>$36,093</h4>
             </div>
@@ -109,31 +109,31 @@
       <section class="section s3" id="s3">
         <h1 class="none">Section 3</h1>
 
-        <video id="video" src="media/video_Trim.mp4" muted loop autoplay data-keepplaying></video>
+        <video id="s3_video" src="media/video_Trim.mp4" muted loop autoplay data-keepplaying></video>
 
         <div class="s3_q2 s3_div">
           <h2>Q2 - 2021</h2>
           <ul>
-            <li><span class="roadmap_text">Token launch on PancakeSwap</span></li>
-            <li><span class="roadmap_text">Website and Social Media</span></li>
-            <li><span class="roadmap_text">Whitepaper</span></li>
-            <li><span class="roadmap_text">Small influencers Marketing</span></li>
-            <li><span class="roadmap_text">First Strem Raid</span></li>
-            <li><span class="roadmap_text">CoinGecko and CMC application</span></li>
-            <li><span class="roadmap_text">Contract audit</span></li>
+            <li><span class="s3_roadmap_text">Token launch on PancakeSwap</span></li>
+            <li><span class="s3_roadmap_text">Website and Social Media</span></li>
+            <li><span class="s3_roadmap_text">Whitepaper</span></li>
+            <li><span class="s3_roadmap_text">Small influencers Marketing</span></li>
+            <li><span class="s3_roadmap_text">First Strem Raid</span></li>
+            <li><span class="s3_roadmap_text">CoinGecko and CMC application</span></li>
+            <li><span class="s3_roadmap_text">Contract audit</span></li>
           </ul>
         </div>
 
         <div class="s3_q3 s3_div">
           <h2>Q3 - 2021</h2>
           <ul>
-            <li><span class="roadmap_text">StreamRaids Mobile App</span></li>
-            <li><span class="roadmap_text">Big Influencers Marketing</span></li>
-            <li><span class="roadmap_text">Big streamers as part of community</span></li>
-            <li><span class="roadmap_text">Develop a streaming mentorship plataform</span></li>
-            <li><span class="roadmap_text">Charity stream</span></li>
-            <li><span class="roadmap_text">Merch</span></li>
-            <li><span class="roadmap_text">More to come...</span></li>
+            <li><span class="s3_roadmap_text">StreamRaids Mobile App</span></li>
+            <li><span class="s3_roadmap_text">Big Influencers Marketing</span></li>
+            <li><span class="s3_roadmap_text">Big streamers as part of community</span></li>
+            <li><span class="s3_roadmap_text">Develop a streaming mentorship plataform</span></li>
+            <li><span class="s3_roadmap_text">Charity stream</span></li>
+            <li><span class="s3_roadmap_text">Merch</span></li>
+            <li><span class="s3_roadmap_text">More to come...</span></li>
           </ul>
         </div>
         
@@ -145,30 +145,30 @@
       <section class="section s4" id="s4">
         <img class="img" id="img" src="media/pexels-cottonbro-4836371.jpg" alt="Recreative machines background"></img>
         <h1 class="none">Section 4</h1>
-        <div class="containers4">
-          <div class="subcontainers4">
-            <div class="subsubcontainers4">
+        <div class="s4_body">
+          <div class="s4_container">
+            <div class="s4_container-info">
               <h2>9% FEES PER TRANSACTION</h2>
-              <div class="icons4"><div class="img_div"><img src="assets\staking.png" id="liquidity" alt="2% fee goes to holders"></div><h3>2% Distributed to all holders proportionally</h3></div>
-              <div class="icons4"><div class="img_div"><img src="assets\liquidity.png" id="liquidity" alt="3% fee goes to liquidity pool"></div><h3>3% Fee per transaction auto add to liquidity pool</h3></div>
-              <div class="icons4"><div class="img_div"><img src="assets\176696.png" id="liquidity" alt="4% is sent to the stream donation wallet"></div><h3>4% Send to the stream donations wallet</h3></div>
+              <div class="s4_icon"><div class="img_div"><img src="assets\staking.png" id="liquidity" alt="2% fee goes to holders"></div><h3>2% Distributed to all holders proportionally</h3></div>
+              <div class="s4_icon"><div class="img_div"><img src="assets\liquidity.png" id="liquidity" alt="3% fee goes to liquidity pool"></div><h3>3% Fee per transaction auto add to liquidity pool</h3></div>
+              <div class="s4_icon"><div class="img_div"><img src="assets\176696.png" id="liquidity" alt="4% is sent to the stream donation wallet"></div><h3>4% Send to the stream donations wallet</h3></div>
               <a class="link_telegram" id="inv_link_tele" href="https://t.me/streamraidsbsc">Join telegram</a>
             </div>
-            <div class="social-medias4">
-              <a class="social-links4" id="telegrams4" target="_blank" href="https://t.me/streamraidsbsc"><img id="telegram" src="media/512px-Telegram_logo.svg.png" alt="Telegram"></a>
-              <a class="social-links4" id="twitters4" target="_blank" href="https://twitter.com/StreamRaidsBSC"><img id="twitter" src="media/gorjeo.png" alt="Twitter"></a>
-              <a class="social-links4" id="pancakes4" target="_blank" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x115a49871f02c522090cb45bbe715db406cafa33"><img id="pancake" src="media/logo.4b4c5aed.png" alt="PancakeSwap"></a>
-              <a class="social-links4" id="poocoins4" target="_blank" href="https://poocoin.app/tokens/0x115a49871f02c522090cb45bbe715db406cafa33"><img id="poocoin" src="media/poocoin512.png" alt="Poocoin"></a>
+            <div class="s4_social-media">
+              <a class="s4_social-links" id="s4_telegram" target="_blank" href="https://t.me/streamraidsbsc"><img id="telegram" src="media/512px-Telegram_logo.svg.png" alt="Telegram"></a>
+              <a class="s4_social-links" id="s4_twitter" target="_blank" href="https://twitter.com/StreamRaidsBSC"><img id="twitter" src="media/gorjeo.png" alt="Twitter"></a>
+              <a class="s4_social-links" id="s4_pancake" target="_blank" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x115a49871f02c522090cb45bbe715db406cafa33"><img id="pancake" src="media/logo.4b4c5aed.png" alt="PancakeSwap"></a>
+              <a class="s4_social-links" id="s4_poocoin" target="_blank" href="https://poocoin.app/tokens/0x115a49871f02c522090cb45bbe715db406cafa33"><img id="poocoin" src="media/poocoin512.png" alt="Poocoin"></a>
             </div>
           </div>
-          <div class="footer">
-            <div class="text_footer">
+          <div class="s4_footer">
+            <div class="s4_text_footer">
               <p>
-                <strong>©2021 <a class="footer_link" target="_blank" href="https://www.streamraids.net/">StreamRaids</a>. </strong>All Rights Reserved.
+                <strong>©2021 <a class="s4_footer_link" target="_blank" href="https://www.streamraids.net/">StreamRaids</a>. </strong>All Rights Reserved.
               </p>
               </div>
-            <div class="text_footer">
-              Developed by <strong><a class="footer_link" target="_blank" href="https://github.com/TheWalKer-TW">TheWalKer-TW</a></strong> & <strong><a class="footer_link" target="_blank" href="https://github.com/MiquelRomeu">MiquelRomeu</a>.</strong>
+            <div class="s4_text_footer">
+              Developed by <strong><a class="s4_footer_link" target="_blank" href="https://github.com/TheWalKer-TW">TheWalKer-TW</a></strong> & <strong><a class="s4_footer_link" target="_blank" href="https://github.com/MiquelRomeu">MiquelRomeu</a>.</strong>
             </div>
           </div>
         </div>
