Update on s1 and s2 and s4

--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
         <a id="buy_button" class="link" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x115a49871f02c522090cb45bbe715db406cafa33" target="_blank">GO BUY NOW!</a>
       </div>
 
-      <div class="s1_socialMedia">
+      <!-- <div class="s1_socialMedia">
           <a class="socialLink link" id="telegram" target="_blank" href="https://t.me/streamraidsbsc"><img id="telegram" src="media/512px-Telegram_logo.svg.png" alt="Telegram"></a>
           <a class="socialLink link" id="twitter" target="_blank" href="https://twitter.com/StreamRaidsBSC"><img id="twitter" src="media/gorjeo.png" alt="Twitter"></a>
           <a class="socialLink link" id="pancake" target="_blank" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x115a49871f02c522090cb45bbe715db406cafa33"><img id="pancake" src="media/logo.4b4c5aed.png" alt="PancakeSwap"></a>
           <a class="socialLink link" id="poocoin" target="_blank" href="https://poocoin.app/tokens/0x115a49871f02c522090cb45bbe715db406cafa33"><img id="poocoin" src="media/poocoin512.png" alt="Poocoin"></a>
-      </div>
+      </div> -->
       
     </section>
 
@@ -108,13 +108,11 @@
           <div class="s4-info_item"><p class="s4-info_name">Price</p><p class="s4-info_number">2</p></div>
           <div class="s4-info_item"><p class="s4-info_name">Market Cap</p><p class="s4-info_number">2</p></div>
           <div class="s4-info_item"><p class="s4-info_name">Holders</p><p class="s4-info_number">2</p></div>
-          <div class="s4_info_fee">
+          <div class="s4_info_item">
             <p class="s4-info_fee_name">Fees:</p>
-            <ul>
-              <li class="s4-info_fee_number">2% Distributed to all holders</li>
-              <li class="s4-info_fee_number">3% Add to liquidity pool</li>
-              <li class="s4-info_fee_number">4% Send to the stream donation wallet</li>
-            </ul>
+            <div class="s4-info_fee_number"><p>2%</p>Distributed to all holders</div>
+            <div class="s4-info_fee_number"><p>3%</p>Add to liquidity pool</div>
+            <div class="s4-info_fee_number"><p>4%</p>Send to the stream donation wallet</div>
           </div>
         </div>
       </div>
