--- a/index.html
+++ b/index.html
@@ -212,7 +212,15 @@
     </section>
 
     <footer>
-
+      <div class="foot-div" id="foot-info">
+        <div class="foot-info_socials">
+          <div class="foot-info_socials_img"><img class="invert" src="./media/pancakeswap.svg" alt="pancake"></div>
+          <div class="foot-info_socials_img"><img class="invert" src="./media/twitter.svg" alt="twitter"></div>
+          <div class="foot-info_socials_img"><img class="invert" src="./media/twitch.svg" alt="twitch"></div>
+          <div class="foot-info_socials_img"><img src="./media/telegram.svg" alt="telegram"></div>
+        </div>
+      </div>
+      <div class="foot-div" id="foot-copyright">©2021 StreamRaids. All Rights Reserved.</div>
     </footer>
 
 
