Side-bar finished
Side-bar finished and also added transition to the main title

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="side_bar">
       <div class="toggle"></div>
       <ul class="side_bar_list">
-        <li class="side_bar-list-item">
+        <li class="side_bar-list-item" id="list_item-PancakeSwap">
           <a class="side_bar-social_media link" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x115a49871f02c522090cb45bbe715db406cafa33" target="_blank">
             <span class="social_media-img_span social_media-span">
               <img class="social_media-img_pancake social_media-img invert" id="side_bar-pancake_icon" src="./media/pancakeswap.svg" alt="pancakeswap">
@@ -41,19 +41,7 @@
             </span>
           </a>
         </li>
-
-        <li class="side_bar-list-item">
-          <a class="side_bar-social_media link" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x115a49871f02c522090cb45bbe715db406cafa33" target="_blank">
-            <span class="social_media-img_span social_media-span">
-              <img class="social_media-img_twitter social_media-img invert" id="side_bar-twitter_icon" src="./media/twitter.svg" alt="twitter">
-            </span>
-            <span class="social_media_text_span social_media-span">
-              <p class="social_media-p">Twitter</p>
-            </span>
-          </a>
-        </li>
-
-        <li class="side_bar-list-item">
+        <li class="side_bar-list-item" id="list_item-Twitch">
           <a class="side_bar-social_media link" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x115a49871f02c522090cb45bbe715db406cafa33" target="_blank">
             <span class="social_media-img_span social_media-span">
               <img class="social_media-img_twitch social_media-img invert" id="side_bar-twitch_icon" src="./media/twitch.svg" alt="twitch">
@@ -63,8 +51,17 @@
             </span>
           </a>
         </li>
-
-        <li class="side_bar-list-item">
+        <li class="side_bar-list-item" id="list_item-Twitter">
+          <a class="side_bar-social_media link" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x115a49871f02c522090cb45bbe715db406cafa33" target="_blank">
+            <span class="social_media-img_span social_media-span">
+              <img class="social_media-img_twitter social_media-img invert" id="side_bar-twitter_icon" src="./media/twitter.svg" alt="twitter">
+            </span>
+            <span class="social_media_text_span social_media-span">
+              <p class="social_media-p">Twitter</p>
+            </span>
+          </a>
+        </li>
+        <li class="side_bar-list-item" id="list_item-Telegram">
           <a class="side_bar-social_media link" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x115a49871f02c522090cb45bbe715db406cafa33" target="_blank">
             <span class="social_media-img_span social_media-span">
               <img class="social_media-img social_media-img_telegram" id="side_bar-telegram_icon" src="./media/telegram.svg" alt="telegram">
@@ -75,30 +72,6 @@
           </a>
         </li>
       </ul>
-<!-- 
-      <div class="side_bar-div">
-        <a class="side_bar-social_media link" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x115a49871f02c522090cb45bbe715db406cafa33" target="_blank">
-          <img class="social_media-img invert" id="side_bar-pancake_icon" src="./media/pancakeswap.svg" alt="pancakeswap">
-        </a>
-      </div>
-
-      <div class="side_bar-div">
-        <a class="side_bar-social_media link" href="https://twitter.com/StreamRaidsBSC" target="_blank">
-          <img class="social_media-img invert" id="side_bar-twitter_icon" src="./media/twitter.svg" alt="twitter">
-        </a>
-      </div>
-
-      <div class="side_bar-div">
-        <a class="side_bar-social_media link" href="https://www.twitch.tv/streamraidsbsc/" target="_blank">
-          <img class="social_media-img invert" id="side_bar-twitch_icon" src="./media/twitch.svg" alt="twitch">
-        </a>
-      </div>
-      
-      <div class="side_bar-div">
-        <a class="side_bar-social_media link" href="https://t.me/streamraidsbsc" target="_blank">
-          <img class="social_media-img" id="side_bar-telegram_icon" src="./media/telegram.svg" alt="telegram">
-        </a>
-      </div> -->
     </div>
 
     <section id="Home" class="section s1">
@@ -155,10 +128,6 @@
             <div class="s2-description_text">By having weekly raids and donations to underrated streamers picked up by community. They will be promoted on our website, socials, and inside our community. 
               This will boost up their streaming career, give them some exposure, and increase their motivation to keep up the good work they're already doing.</div>
           </div>
-        </div>
-        <div id="s2-bot">
-          <div class="s2-description_title"></div>
-          <div class="s2-description_text"></div>
         </div>
       </div>
     </section>
