Side-bar done and revised
Side-bar had the links wrong now it's all perfect

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </a>
         </li>
         <li class="side_bar-list-item" id="list_item-Twitch">
-          <a class="side_bar-social_media link" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x115a49871f02c522090cb45bbe715db406cafa33" target="_blank">
+          <a class="side_bar-social_media link" href="https://www.twitch.tv/streamraidsbsc/" target="_blank">
             <span class="social_media-img_span social_media-span">
               <img class="social_media-img_twitch social_media-img invert" id="side_bar-twitch_icon" src="./media/twitch.svg" alt="twitch">
             </span>
@@ -52,7 +52,7 @@
           </a>
         </li>
         <li class="side_bar-list-item" id="list_item-Twitter">
-          <a class="side_bar-social_media link" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x115a49871f02c522090cb45bbe715db406cafa33" target="_blank">
+          <a class="side_bar-social_media link" href="https://twitter.com/StreamRaidsBSC" target="_blank">
             <span class="social_media-img_span social_media-span">
               <img class="social_media-img_twitter social_media-img invert" id="side_bar-twitter_icon" src="./media/twitter.svg" alt="twitter">
             </span>
@@ -62,7 +62,7 @@
           </a>
         </li>
         <li class="side_bar-list-item" id="list_item-Telegram">
-          <a class="side_bar-social_media link" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x115a49871f02c522090cb45bbe715db406cafa33" target="_blank">
+          <a class="side_bar-social_media link" href="https://t.me/streamraidsbsc" target="_blank">
             <span class="social_media-img_span social_media-span">
               <img class="social_media-img social_media-img_telegram" id="side_bar-telegram_icon" src="./media/telegram.svg" alt="telegram">
             </span>
@@ -83,7 +83,7 @@
       <div class="s1_text noselect">
 
           <p class="s1-text_description">Welcome to the</p>
-          <a class="s1-text_titleName link" href="https://poocoin.app/tokens/0x115a49871f02c522090cb45bbe715db406cafa33" target="_blank"><h1 class="theme_color">STREAMRAIDS</h1></a>
+          <a class="s1-text_titleName link" href="https://t.me/streamraidsbsc" target="_blank"><h1 class="theme_color">STREAMRAIDS</h1></a>
           <p class="s1-text_description">
             A community driven token, aiming to help and promote small streamers around the world.
           </p>
