footer updaded, details added

--- a/index.html
+++ b/index.html
@@ -183,13 +183,19 @@
     <footer>
       <div class="foot-div" id="foot-info">
         <div class="foot-info_socials">
-          <div class="foot-info_socials_img"><img class="invert" src="./media/pancakeswap.svg" alt="pancake"></div>
-          <div class="foot-info_socials_img"><img class="invert" src="./media/twitter.svg" alt="twitter"></div>
-          <div class="foot-info_socials_img"><img class="invert" src="./media/twitch.svg" alt="twitch"></div>
-          <div class="foot-info_socials_img"><img src="./media/telegram.svg" alt="telegram"></div>
+          <a class="foot-info_socials_img" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x115a49871f02c522090cb45bbe715db406cafa33" target="_blank"><img class="invert" src="./media/pancakeswap.svg" alt="pancake"></a>
+          <a class="foot-info_socials_img" href="https://twitter.com/StreamRaidsBSC" target="_blank"><img class="invert" src="./media/twitter.svg" alt="twitter"></a>
+          <a class="foot-info_socials_img" href="https://www.twitch.tv/streamraidsbsc/" target="_blank"><img class="invert" src="./media/twitch.svg" alt="twitch"></a>
+          <a class="foot-info_socials_img" href="https://t.me/streamraidsbsc" target="_blank"><img src="./media/telegram.svg" alt="telegram"></a>
         </div>
       </div>
       <div class="foot-div" id="foot-copyright">©2021 StreamRaids. All Rights Reserved.</div>
+      <div class="foot-div" id="foot-developedby">
+        <p>Developed by</p>
+        <a class="foot-developedby_link" target="_blank" href="https://github.com/TheWalKer-TW">TheWalKer-TW</a>
+        <p>&</p>
+        <a class="foot-developedby_link" target="_blank" href="https://github.com/MiquelRomeu">MiquelRomeu</a>
+      </div>
     </footer>
 
 
