Minor changes on style, such ass title color

--- a/index.html
+++ b/index.html
@@ -117,14 +117,14 @@
       </div>
       <div class="s2-div_About" id="s2-div_description">
         <div id="s2-top">
-          <div class="s2-description_title">Why</div>
+          <div class="s2-description_title">Why ?</div>
           <div class="s2-description_text">The streaming platforms are increasing day by day, the pandemic made many people join the streaming community and as a result, we can see the outburst these platforms had in the last months.
             With the outburst, the competition is also increasing, making it hard for new joiners to succeed in the world of streaming. Our goal is to be a life changer for as many small streamers as possible.</div>
         </div>
         <div id="s2-mid">
           <div class="s2-description_img"><img src="" alt="Img description"></div>
           <div id="s2-description_mid">
-            <div class="s2-description_title">How</div>
+            <div class="s2-description_title">How ?</div>
             <div class="s2-description_text">By having weekly raids and donations to underrated streamers picked up by community. They will be promoted on our website, socials, and inside our community. 
               This will boost up their streaming career, give them some exposure, and increase their motivation to keep up the good work they're already doing.</div>
           </div>
