--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <span class="letters letters-2">TO</span>
       </div>
       <div class="ml4">
-        <span class="letters letters-3">STREAMRAIDS!</span>
+        <span class="letters letters-3">STREAMRAIDS</span>
       </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
