html roadmap added

--- a/index.html
+++ b/index.html
@@ -133,7 +133,50 @@
     </section>
 
     <section id="Roadmap" class="section s3">
-    
+      <div class="s3-div_Roadmap" id="s3-div_title">Roadmap</div>
+      <div class="s3-div_Roadmap" id="s3-div_timeline">
+        <div class="s3-timeline_container" id="s3-timeline_q1">
+          <div class="s3-timeline_item">
+            <div class="s3-timeline_item_title">Q1</div>
+            <ul class="s3-timeline_itme_title">
+              <li>Token launch</li>
+              <li>List on pancakeswap</li>
+              <li>Create the website</li>
+              <li>Create the social profiles</li>
+              <li>Whitepaper</li>
+              <li>Small influencers marketing</li>
+              <li>First stream raid</li>
+            </ul>
+          </div>
+          <div class="s3-timeline_circle"></div>
+        </div>
+        <div class="s3-timeline_container" id="s3-timeline_q2">
+          <div class="s3-timeline_circle"></div>
+          <div class="s3-timeline_item">
+            <div class="s3-timeline_item_title">Q2</div>
+            <ul class="s3-timeline_itme_title">
+              <li>Coingecko application</li>
+              <li>CMC application</li>
+              <li>Contract audit</li>
+              <li>Create streamraids mobile app (wallet/stream promoting and other features)</li>
+              <li>Mid/big influencers marketing</li>
+              <li>Have at least one big streamer as part of the community</li>
+              <li>Start designing and working on a streaming mentorship platform</li>
+            </ul>
+          </div>
+        </div>
+        <div class="s3-timeline_container" id="s3-timeline_q3">
+          <div class="s3-timeline_item">
+            <div class="s3-timeline_item_title">Q3</div>
+            <ul class="s3-timeline_itme_title">
+              <li>Charity stream</li>
+              <li>Merch</li>
+              <li>TBA</li>
+            </ul>
+          </div>
+          <div class="s3-timeline_circle"></div>
+        </div>
+      </div>
     </section>
 
     <section id="Tokenomics" class="section s4">
@@ -197,7 +240,6 @@
         <a class="foot-developedby_link" target="_blank" href="https://github.com/MiquelRomeu">MiquelRomeu</a>
       </div>
     </footer>
-
 
 
 
