--- a/index.html
+++ b/index.html
@@ -223,20 +223,36 @@
       <div class="s5-div_team" id="s5-div_title">Our Team</div>
       <div class="s5-div_team" id="s5-div_content">
         <div class="s5-team_item">
-          <div class="s5-team_img"><img src="" alt="img"></div>
-          <div class="s5-team_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam, nihil.</div>
+          <div class="s5-team_img"><img src="/images/mickey01.jpg" alt="img"></div>
+          <div class="s5-team_description">Lorem, ipsum.</div>
+          <div class="s5-team_socials">
+            <a class="s5-team_socials_img" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img class="invert" src="/media/twitter.svg" alt="img"></a>
+            <a class="s5-team_socials_img" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img class="invert" src="/media/twitter.svg" alt="img"></a>
+          </div>
         </div>
         <div class="s5-team_item">
-          <div class="s5-team_img"><img src="" alt="img"></div>
-          <div class="s5-team_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam, nihil.</div>
+          <div class="s5-team_img"><img src="/images/mickey01.jpg" alt="img"></div>
+          <div class="s5-team_description">Lorem, ipsum.</div>
+          <div class="s5-team_socials">
+            <a class="s5-team_socials_img" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img class="invert" src="/media/twitter.svg" alt="img"></a>
+            <a class="s5-team_socials_img" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img class="invert" src="/media/twitter.svg" alt="img"></a>
+          </div>
         </div>
         <div class="s5-team_item">
-          <div class="s5-team_img"><img src="" alt="img"></div>
-          <div class="s5-team_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam, nihil.</div>
+          <div class="s5-team_img"><img src="/images/mickey01.jpg" alt="img"></div>
+          <div class="s5-team_description">Lorem, ipsum.</div>
+          <div class="s5-team_socials">
+            <a class="s5-team_socials_img" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img class="invert" src="/media/twitter.svg" alt="img"></a>
+            <a class="s5-team_socials_img" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img class="invert" src="/media/twitter.svg" alt="img"></a>
+          </div>
         </div>
         <div class="s5-team_item">
-          <div class="s5-team_img"><img src="" alt="img"></div>
-          <div class="s5-team_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam, nihil.</div>
+          <div class="s5-team_img"><img src="/images/mickey01.jpg" alt="img"></div>
+          <div class="s5-team_description">Lorem, ipsum.</div>
+          <div class="s5-team_socials">
+            <a class="s5-team_socials_img" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img class="invert" src="/media/twitter.svg" alt="img"></a>
+            <a class="s5-team_socials_img" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img class="invert" src="/media/twitter.svg" alt="img"></a>
+          </div>
         </div>
       </div>
     </section>
